fixed spacing

--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body {
     font-size: 16px;
     line-height: 22px;
     margin-top: 30px;
+    margin-left: 50px;
 }
 header, main {
     width: 960px;
